# tredis

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: pr-check.yml  release.yml  stale-branch.yml
src/: app.rs  main.rs  model.rs
src/ui/: acls_table.rs  channels_table.rs  clients_table.rs  configs_table.rs  describe.rs  dialog.rs  header.rs  info_view.rs  keys_table.rs  mod.rs  monitor_table.rs  pubsub_table.rs  resources.rs  server_dialog.rs  servers_table.rs  slowlog_table.rs  splash.rs  streams_table.rs
