[package]
name = "tredis"
version = "1.0.0-rc.2"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
clap = { version = "4.5.54", features = ["derive"] }
crossterm = "0.29.0"
dirs = "6.0"
futures = "0.3.31"
hostname = "0.4.0"
itertools = "0.14.0"
ratatui = "0.30.0"
redis = { version = "1.0.2", features = ["tokio-comp", "tls-native-tls", "tokio-native-tls-comp"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["full"] }
