[package]
name = "tredis"
version = "1.2.0"
edition = "2021"
description = "Terminal UI for Redis - A modern TUI for managing Redis servers"
license = "MIT"
repository = "https://github.com/huseyinbabal/tredis"
homepage = "https://github.com/huseyinbabal/tredis"
keywords = ["redis", "tui", "terminal", "database", "cli"]
categories = ["command-line-utilities", "database"]
readme = "README.md"
authors = ["Huseyin Babal"]

[dependencies]
anyhow = "1.0.101"
chrono = "0.4.43"
clap = { version = "4.5.56", features = ["derive"] }
crossterm = "0.29.0"
dirs = "6.0"
futures = "0.3.31"
hostname = "0.4.0"
itertools = "0.14.0"
ratatui = "0.30.0"
redis = { version = "1.0.2", features = ["tokio-comp", "tls-native-tls", "tokio-native-tls-comp"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
